--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "email-verification",
-  "version": "0.1.3",
+  "version": "0.1.4",
   "description": "Verify email sign-up using MongoDB.",
   "main": "index.js",
   "scripts": {
@@ -13,7 +13,8 @@
   "keywords": [
     "mongodb",
     "auth",
-    "authentication"
+    "authentication",
+    "email"
   ],
   "author": "Dakota St. Laurent <hello@stdako.com> (http://stdako.com/)",
   "license": "ISC",
