updates dependencies in package.json
(#1)

--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
   "devDependencies": {
     "bcrypt": "^0.8.0",
     "body-parser": "^1.9.3",
-    "express": "^4.10.4"
+    "express": "^4.10.4",
+    "mocha" : "*"
   }
 }
