--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "bcrypt": "^0.8.0",
     "body-parser": "^1.9.3",
     "express": "^4.10.4",
-    "mocha" : "*"
+    "mocha" : "*",
+    "chai" : "*"
   }
 }
