--- a/_config.yml
+++ b/_config.yml
@@ -7,7 +7,7 @@ safe: false
 
 ### site serving configuration ###
 exclude: [CNAME, README.md, .gitignore]
-permalink: /:title ## disables post output
+permalink: /:day ## disables post output
 timezone: null
 lsi: false
 markdown: kramdown
