--- a/_config.yml
+++ b/_config.yml
@@ -19,18 +19,21 @@ title:       "Avi Srivastava"
 keywords:    "CV"
 description: "My page"
 source_link: "https://github.com/t413/SinglePaged"
-favicon:     #put a path like: "img/favicon.ico"
-touch_icon:  #put a path like: "img/apple-touch-icon.png"
+favicon:     "img/favicon.ico" #put a path like: "img/favicon.ico"
+touch_icon:  "img/apple.png" #put a path like: "img/apple-touch-icon.png"
 google_analytics_key: ## put YOUR key here to enable tracking! (blank to disable)
 
 
 ### template colors, used site-wide via css ###
 colors:
   black:     '#111111'
-  white:     '#f8f8f8'
+  white:     '#f1eed9'
   blue:      '#49a7e9'
   green:     '#9bcf2f'
   purple:    '#c869bf'
   orange:    '#fab125'
   turquoise: '#0fbfcf'
-  
+  textbg:    '#46433A'
+  garnet:    '#782F40'
+  gold:      '#CEB888'
+
