--- a/_config.yml
+++ b/_config.yml
@@ -16,9 +16,9 @@ highlighter: rouge
 
 ### content configuration ###
 title:       "Avi Srivastava"
-keywords:    "CV"
-description: "My page"
-source_link: "https://github.com/t413/SinglePaged"
+keywords:    "Avi, computational biology, genomics, transcriptomics"
+description: "Persomal Page of Avi Srivastava"
+source_link: "https://github.com/keyavi.github.io"
 favicon:     "img/favicon.ico" #put a path like: "img/favicon.ico"
 touch_icon:  "img/apple.png" #put a path like: "img/apple-touch-icon.png"
 google_analytics_key: ## put YOUR key here to enable tracking! (blank to disable)
