--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "rand-token": "^0.2.1"
   },
   "devDependencies": {
+    "async": "^1.4.2",
     "bcryptjs": "^2.3.0",
     "body-parser": "^1.9.3",
     "chai": "*",
