--- a/package.json
+++ b/package.json
@@ -12,8 +12,7 @@
     "lint:main": "jshint --reporter=node_modules/jshint-stylish index.js",
     "lint:test": "jshint --reporter=node_modules/jshint-stylish test/*.js",
     "lint": "npm run lint:main && npm run lint:examples && npm run lint:test",
-    "test": "mocha",
-		"posttest": "jshint index.js"
+    "test": "mocha"
   },
   "repository": {
     "type": "git",
