Updates package.json (#40)(#38)
Sets jshint options to be newest available.
Not a big change, but using a specific version is not necessary.

--- a/package.json
+++ b/package.json
@@ -46,8 +46,8 @@
     "chai": "*",
     "express": "^4.10.4",
     "js-beautify": "^1.5.10",
-    "jshint": "^2.8.0",
-    "jshint-stylish": "^2.0.1",
+    "jshint": "*",
+    "jshint-stylish": "*",
     "mocha": "*",
     "nodemailer-stub-transport": "^1.0.0",
     "bluebird": "*"
