--- a/package.json
+++ b/package.json
@@ -33,7 +33,7 @@
   "bugs": {
     "url": "https://github.com/whitef0x0/node-email-verification/issues"
   },
-  "homepage": "https://github.com/whitef0x0/node-email-verification",
+  "homepage": "http://email-verification.xyz/",
   "dependencies": {
     "mongoose": "~3.8.0",
     "nodemailer": "^1.3.0",
