--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "email-verification",
-  "version": "0.4.5",
+  "version": "0.4.6",
   "description": "Verify email sign-up using MongoDB.",
   "main": "index.js",
   "scripts": {
@@ -26,9 +26,17 @@
   ],
   "author": "Dakota St. Laurent <hello@saintdako.com> (http://saintdako.com/)",
   "contributors": [
-    {"name": "David Baldwynn", "email": "polydaic@gmail.com", "url": "https://github.com/whitef0x0"},
-    {"name": "Frank Cash", "email": "cashc@acm.org", "url": "https://github.com/frankcash"}
-    ],
+    {
+      "name": "David Baldwynn",
+      "email": "polydaic@gmail.com",
+      "url": "https://github.com/whitef0x0"
+    },
+    {
+      "name": "Frank Cash",
+      "email": "cashc@acm.org",
+      "url": "https://github.com/frankcash"
+    }
+  ],
   "license": "ISC",
   "bugs": {
     "url": "https://github.com/whitef0x0/node-email-verification/issues"
