--- a/package.json
+++ b/package.json
@@ -43,7 +43,7 @@
   },
   "homepage": "http://email-verification.xyz/",
   "dependencies": {
-    "mongoose": "~3.8.0",
+    "mongoose": "^4.9.9",
     "nodemailer": "^1.3.0",
     "rand-token": "^0.2.1"
   },
